--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -9,9 +9,18 @@
   padding: 0 8px !important;
 }
 
-.c-card {
+%c-card-base {
   box-shadow: 0 5px 10px -10px rgba(85, 85, 85, 0.08), 0 10px 20px 0 rgba(85, 85, 85, 0.06),
     0 15px 30px 0 rgba(85, 85, 85, 0.03) !important;
+}
+
+.c-card {
+  @extend %c-card-base;
+}
+
+.shadow-card {
+  @extend %c-card-base;
+  padding: 8px;
 }
 
 // Editor/Preview
@@ -71,7 +80,7 @@
 }
 
 .vditor-reset {
-  padding: 0;
+  padding: 0 !important;
 }
 
 .viewer-desktop img {
@@ -150,7 +159,7 @@
   word-break: break-all;
 }
 
-.parent-comment {
+.quote-card {
   border-left: 2px solid lightgrey;
 }
 
