--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,2 +1,3 @@
 $body-font-family: 'Roboto', '-apple-system', 'BlinkMacSystemFont', 'Helvetica Neue', 'PingFang SC',
   sans-serif, 'Microsoft YaHei', 'Source Han Sans SC', 'Noto Sans CJK SC', 'WenQuanYi Micro Hei' !important;
+$rich-text-line-height: 1.6;
