--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -52,6 +52,7 @@
 .vditor-reset {
   font-family: $body-font-family;
   line-height: $rich-text-line-height;
+  color: $rich-text-color;
 }
 
 .simple-editor h1,
@@ -60,6 +61,7 @@
   border-bottom: none !important;
   font-family: $body-font-family;
   font-size: $font-size-root;
+  color: $rich-text-color;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -88,6 +90,7 @@
 .simple-viewer {
   font-family: $body-font-family;
   font-size: $font-size-root;
+  color: $rich-text-color;
 }
 
 .simple-viewer h1,
@@ -96,6 +99,7 @@
   border-bottom: none !important;
   font-family: $body-font-family;
   font-size: $font-size-root;
+  color: $rich-text-color;
   margin-top: 10px;
   margin-bottom: 10px;
 }
@@ -122,6 +126,7 @@
 .viewer {
   font-family: $body-font-family;
   font-size: $font-size-root;
+  color: $rich-text-color;
 }
 
 .og-card {
