--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,7 +1,11 @@
-@import '~vuetify/src/styles/styles.sass';
-@import 'variables';
-
 // General
+.theme--light.v-application {
+  background: rgb(248, 250, 252) !important;
+}
+.theme--light.v-tabs-items {
+  background: transparent !important;
+}
+
 .bottom-btn {
   box-shadow: 0 0 20px 2px rgb(0 0 0 / 20%);
   position: fixed;
@@ -26,8 +30,8 @@
 }
 
 %c-card-base {
-  box-shadow: 0 5px 10px -10px rgba(85, 85, 85, 0.08), 0 10px 20px 0 rgba(85, 85, 85, 0.06),
-    0 15px 30px 0 rgba(85, 85, 85, 0.03) !important;
+  box-shadow: 0 1px 1px -1px rgba(85, 85, 85, 0.08), 0 1px 5px 0 rgba(85, 85, 85, 0.06),
+    0 1px 5px 0 rgba(85, 85, 85, 0.03) !important;
 }
 
 .c-card {
@@ -37,6 +41,7 @@
 .shadow-card {
   @extend %c-card-base;
   padding: 8px;
+  background: #fff;
 }
 
 .less-top-padding {
