chore(app): readjust phone

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -42,6 +42,10 @@
   @extend %c-card-base;
   padding: 8px;
   background: #fff;
+
+  @media screen and (max-width: 600px) {
+    box-shadow: none !important;
+  }
 }
 
 .less-top-padding {
