--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -208,6 +208,10 @@
   word-break: break-all;
 }
 
+.site-desc {
+  word-break: break-all;
+}
+
 .quote-card {
   border-left: 2px solid lightgrey;
 }
