Tweak profile editor

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -21,6 +21,11 @@
   padding-top: 0 !important;
 }
 
+.compact-col2 {
+  padding-top: 0 !important;
+  padding-bottom: 0 !important;
+}
+
 .vh-100 {
   height: 100vh !important;
 }
