--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -92,6 +92,7 @@
 }
 
 .vditor-reset {
+  padding: 10px 10px !important;
   font-family: $body-font-family;
   line-height: $rich-text-line-height;
   color: $rich-text-color;
