--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -91,11 +91,13 @@
   }
 }
 
-.vditor-reset {
-  padding: 10px 10px !important;
-  font-family: $body-font-family;
-  line-height: $rich-text-line-height;
-  color: $rich-text-color;
+.vditor-content {
+  .vditor-reset {
+    padding: 10px 10px !important;
+    font-family: $body-font-family;
+    line-height: $rich-text-line-height;
+    color: $rich-text-color;
+  }
 }
 
 .simple-editor h1,
