--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -132,6 +132,10 @@
   max-width: 100%;
 }
 
+.title {
+  font-weight: 400 !important;
+}
+
 .simple-viewer {
   font-family: $body-font-family;
   font-size: $font-size-root;
