--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -35,8 +35,8 @@
 }
 
 %c-card-base {
-  box-shadow: 0 5px 10px -10px rgba(85, 85, 85, 0.08), 0 10px 20px 0 rgba(85, 85, 85, 0.06),
-    0 15px 30px 0 rgba(85, 85, 85, 0.03) !important;
+  box-shadow: 0 0 10px -10px rgba(85, 85, 85, 0.08), 0 0 20px 0 rgba(85, 85, 85, 0.06),
+    0 0 30px 0 rgba(85, 85, 85, 0.03) !important;
 }
 
 .c-card {
