--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -91,12 +91,12 @@
   }
 }
 
-.vditor-content {
-  .vditor-reset {
-    font-family: $body-font-family;
-    line-height: $rich-text-line-height;
-    color: $rich-text-color;
-  }
+.vditor-reset,
+.ProseMirror {
+  font-family: $body-font-family;
+  line-height: $rich-text-line-height;
+  color: $rich-text-color;
+  -webkit-font-smoothing: auto;
 }
 
 .simple-editor h1,
