--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,4 +1,4 @@
-$body-font-family: 'Roboto', '-apple-system', 'BlinkMacSystemFont', 'Helvetica Neue', 'PingFang SC',
+$body-font-family: '-apple-system', 'Roboto', 'BlinkMacSystemFont', 'Helvetica Neue', 'PingFang SC',
   sans-serif, 'Microsoft YaHei', 'Source Han Sans SC', 'Noto Sans CJK SC', 'WenQuanYi Micro Hei' !important;
 $rich-text-line-height: 1.6;
-$rich-text-color: #121212;
+$rich-text-color: rgb(18, 18, 18);
