--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -91,11 +91,27 @@
   }
 }
 
+.v-application {
+  .title,
+  .text-h5,
+  .headline {
+    -webkit-font-smoothing: auto;
+  }
+}
+
 .vditor-reset,
 .ProseMirror {
   font-family: $body-font-family;
   line-height: $rich-text-line-height;
   color: $rich-text-color;
+  -webkit-font-smoothing: auto;
+}
+
+.comment-item {
+  .vditor-reset,
+  .ProseMirror {
+    -webkit-font-smoothing: antialiased;
+  }
 }
 
 .simple-editor h1,
