--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -99,12 +99,18 @@
   }
 }
 
-.vditor-reset,
-.ProseMirror {
-  font-family: $body-font-family;
-  line-height: $rich-text-line-height;
-  color: $rich-text-color;
-  -webkit-font-smoothing: auto;
+.v-application {
+  .vditor-reset,
+  .ProseMirror {
+    font-family: $body-font-family;
+    line-height: $rich-text-line-height;
+    color: $rich-text-color;
+    -webkit-font-smoothing: auto;
+
+    p {
+      margin-bottom: 20px;
+    }
+  }
 }
 
 .comment-item {
